<resources>
    <string name="app_name">Mill AV</string>
    <string name="mobile_no">Mobile No.*</string>
    <string name="password">Password*</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="required">Required</string>
    <string name="registered_mobile_no">Registered Mobile No.*</string>
    <string name="new_password">New Password*</string>
    <string name="confirm_new_password">Confirm New Password*</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_details_to_reset_password">Enter details to reset password.</string>
    <string name="full_name">Full Name*</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_crop">Add Crop</string>
    <string name="enter_crops">Enter Crops</string>
    <string name="make_bill">Make Bill</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus Button</string>
    <string name="zero">0</string>
    <string name="select_crop">Select Crop*</string>
    <string name="save">Save</string>
    <string name="employer_log_in">Employer Log In</string>
    <string name="employee_log_in">Employee Log In</string>
    <string name="employer_mobile_no">Employer Mobile No.*</string>
    <string name="weight_truck_plus_bags">Weight: Truck + Bags*</string>
    <string name="weight_truck_minus_bags">Weight: Truck - Bags*</string>
    <string name="add_new_crop">Add New Crop</string>
    <string name="employer_dashboard">Employer Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_details_of_new_crop">Enter details of new crop.</string>
    <string name="crop_name">Crop Name*</string>
    <string name="price_per_kg">Price/Kg*</string>
    <string name="fixed_weight">Fixed Weight</string>
    <string name="pending_bills">Pending Bills</string>
    <string name="no_bills_pending">No bills pending.</string>
    <string name="kg">Kg</string>
    <string name="total_weight">Total Weight</string>
    <string name="weights_do_not_match">Weights do not match!</string>
    <string name="bill_number_header">Bill Number:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_customer_information">Add customer information.</string>
    <string name="confirm">Confirm</string>
    <string name="address">Address*</string>
    <string name="shop_name">Shop Name</string>
    <string name="name_header">Name:</string>
    <string name="mobile_header">Mobile:</string>
    <string name="address_header">Address:</string>
    <string name="date_header">Date:</string>
    <string name="bill_no_header">Bill No:</string>
    <string name="s_no">S No.</string>
    <string name="crop">Crop</string>
    <string name="bags">Bags</string>
    <string name="weight">Weight</string>
    <string name="price_kg">Price/KG</string>
    <string name="total">Total</string>
    <string name="print">Print</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="rs">₹</string>
    <string name="truck_required">Truck*</string>
</resources>