<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddNewCropFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slidingForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/viewAddNewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_details_of_new_crop"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutInputNewCropName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputNewCropName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/crop_name"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewAddNewMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layoutInputPricePerKg"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNewCropName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputPricePerKg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_per_kg"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutInputNewCropName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/buttonAddCrop"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPricePerKg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_crop"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutInputPricePerKg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.Button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>